<resources>
    <string name="app_name">Flashuka\'s ViewGroup App</string>
    <string name="dump_photos">0 photos obtained</string>
    <string name="entry_price">entry Rp.35k per person</string>
    <string name="event_name">L\'Tropico Cosplay Event</string>
    <string name="desc_text">Hallo selamat malam rakyat cosmed.. Ada event nih buat tahun depan di bulan JANUARI\nKZR.Inc Proudly Present..\n\nITSUMO Paatti : yang berarti selalu berpesta. Adalah tema yang kami ambil kali ini, menggambarkan pesta yang tidak berakhir dan selalu membawa kebahagiaan dan memorable meski acarasudah berakhir, namun sensasinya akan selalu diingat.</string>
    <string name="desc_text2">Pendaftaran COSWALK :\nhttps://docs.google.com/…/1FAIpQLSfPD8.../viewform\nLink Pendaftaran COSPERFORM :\nhttps://docs.google.com/.../1FAIpQLSeKtAT4ETe5hq.../viewform\n\nSyarat dan Ketentuan \nCosperform Kompetisi :\n- Free Registrasi, tetapi calon peserta wajib membeli tiket masuk pada saat pendaftaran\n- Dilarang menampilkan adegan pornografi dan SARA.\n- Dilarang menggunakan properti yang dapat membahayakan serta mengotori area panggung dan sekitar (ex: cairan, api, senjata tajam, tepung, dsbnya).\n- durasi sound maksimal 3 menit untuk perform dan diserahkan maksimal pada tanggal 27 Januari 2023\n- untuk tim terdiri dari 2 orang\n- pendaftaran lomba cosplay paling lambat tanggal 27 Januari 2023\n\nCostreet Kompetisi :\n- Free Registrasi, tetapi calon peserta wajib membeli tiket masuk pada saat pendaftaran\n- Dilarang menampilkan adegan pornografi dan SARA\n- Dilarang menggunakan properti yang dapat membahayakan serta mengotori area panggung dan sekitar (ex: cairan, api, senjata tajam, tepung, dsbnya).\n\n• Untuk Info Lebih Lanjut :\n- WA Tiket\n081264691648 (Kiky)\n- WA Cosplay\n0898 9368 707 (Dede)\n\nOrganized by : KZR.Inc and Pipow</string>
    <string name="hari_tanggal">Hari/Tanggal</string>
    <string name="sabtu_28_feb_2023">Sabtu / 28 Feb 2023</string>
    <string name="tempat">Tempat</string>
    <string name="place">L\'Tropico - Sei Batang Hari No.62</string>
    <string name="open_gate">Open Gate</string>
    <string name="_11_00_siang">11:00 Siang</string>
    <string name="biaya_registrasi_lomba">Registrasi Lomba</string>
    <string name="free">FREE</string>
    <string name="batas_registrasi">Batas Registrasi</string>
    <string name="_27_januari_2023">27 Januari 2023</string>
    <string name="more_info">More Info</string>
    <string name="github">Github : Flashuka </string>
    <string name="facebook_flashuka">Facebook : Flashuka</string>
    <string name="facebook_raihan">Facebook : My Friend</string>

</resources>