<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <!--<ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/event" />-->
            <com.denzcoskun.imageslider.ImageSlider
                android:id="@+id/image_slider"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:iss_auto_cycle="true"
                app:iss_period="3000"
                app:iss_delay="1000"
                />

            <TextView
                android:id="@+id/dump_photos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@android:color/white"
                android:layout_gravity="bottom"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp"
                android:background="#4D000000"
                android:drawablePadding="4dp"
                android:gravity="center_vertical"
                android:padding="8dp"
                android:text="@string/dump_photos" />
        </FrameLayout>

<!--        Deskripsi 1-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="15dp"
            android:textSize="30sp"
            android:text="@string/event_name" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:text="@string/entry_price"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="15dp"
            android:textSize="17sp"
            android:text="@string/desc_text"/>

<!--        Tabel-->
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_marginEnd="15dp">
            <TableRow
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:layout_marginBottom="7dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="25dp"
                    android:textSize="17sp"
                    android:text="@string/hari_tanggal"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:layout_weight="1"
                    android:text="@string/sabtu_28_feb_2023" />
            </TableRow>
            <TableRow
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:layout_marginBottom="7dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="25dp"
                    android:textSize="17sp"
                    android:layout_gravity="center_vertical"
                    android:text="@string/tempat"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:layout_weight="1"
                    android:text="@string/place" />
            </TableRow>
            <TableRow
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:layout_marginBottom="7dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="25dp"
                    android:textSize="17sp"
                    android:text="@string/open_gate"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:layout_weight="1"
                    android:text="@string/_11_00_siang" />
            </TableRow>
            <TableRow
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:layout_marginBottom="7dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="25dp"
                    android:textSize="17sp"
                    android:text="@string/biaya_registrasi_lomba"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:layout_weight="1"
                    android:text="@string/free" />
            </TableRow>
            <TableRow
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:layout_marginBottom="7dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="25dp"
                    android:textSize="17sp"
                    android:text="@string/batas_registrasi"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:layout_weight="1"
                    android:text="@string/_27_januari_2023" />
            </TableRow>
        </TableLayout>

<!--        //Deskripsi 2-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:textSize="17sp"
            android:text="@string/desc_text2"
            android:autoLink="all"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/moreInfo"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="7dp"
                android:text="@string/more_info" />
            <Button
                android:id="@+id/btnProfile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@android:color/white"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="7dp"
                android:layout_marginEnd="15dp"
                android:background="@color/black"
                app:icon="@drawable/ic_baseline_account_circle_24"
                style="@style/Widget.Material3.Button"
                android:gravity="center_vertical|center_horizontal"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>