<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    android:orientation="vertical">

    <Button
        android:id="@+id/btnGithub"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_gravity="center_horizontal"
        android:textAllCaps="false"
        android:text="@string/github"/>

    <Button
        android:id="@+id/btnFB1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_gravity="center_horizontal"
        android:textAllCaps="false"
        android:text="@string/facebook_flashuka"/>

    <Button
        android:id="@+id/btnFB2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_gravity="center_horizontal"
        android:textAllCaps="false"
        android:text="@string/facebook_raihan"/>


</LinearLayout>